--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -90,8 +90,10 @@
 					<div class="ContainerIndent">
 
 						<div class="closeAddBeneficiary Fright">
-							<p:commandLink>
-								<img src="/javax.faces.resource/images/closeBen.png.xhtml?ln=tcm" class="atCheckMarkImg"/>
+							<p:commandLink actionListener="#{tdcto.tdMasterData.cancelEditBeneficiary}"
+                                    process="none" update=":ctoForm:tdaccordian:beneficiaryPanel">
+								<img src="/javax.faces.resource/images/closeBen.png.xhtml?ln=tcm"
+                                     class="atCheckMarkImg"/>
 							</p:commandLink>
 						</div>
 						<div class="Container100">
