--- a/tcm/modules/web/src/main/webapp/register.xhtml
+++ b/tcm/modules/web/src/main/webapp/register.xhtml
@@ -8,7 +8,7 @@
     <f:metadata>
         <f:viewParam name="u" value="#{userBean.beanUserID}"/>
         <f:viewParam name="r" value="#{userBean.beanResetID}"/>
-        <f:event type="preRenderView" listener="#{userBean.preRenderView}"/>
+        <f:event type="preRenderView" listener="#{userBean.preRenderCreateUserID}"/>
     </f:metadata>
 
     <ui:define name="content">
@@ -25,7 +25,7 @@
                         <h:inputHidden id="resetCode" value="#{userBean.beanResetID}"/>
                         <div class="EmptyBox10"></div>
                         <div class="Container90">
-                            <p:growl id="sgrowl" escape="false" autoUpdate="true"/>
+                            <p:messages id="signmsg" showDetail="false" sticky="true" escape="true" closable="true"/>
                         </div>
                         <div class="EmptyBox5"></div>
                         <p:panel id="signup" styleClass="Container100" style="border:0px">
@@ -42,7 +42,7 @@
                                         <h:outputText styleClass="Wid90"/>
 
                                         <h:outputText value="Password" styleClass="Wid90"/>
-                                        <p:password id="pwd1" value="#{userBean.password}" styleClass="Wid90"
+                                        <p:password id="pwd1" value="#{userBean.userdata.password}" styleClass="Wid90"
                                                     placeholder="New Password"
                                                     feedback="true" inline="true">
                                         </p:password>
@@ -51,7 +51,7 @@
                                                          value="Help" process="@none"/>
 
                                         <h:outputText value="Confirm Password" styleClass="Wid90"/>
-                                        <p:password id="pwd2" value="#{userBean.confirmNewPassword}" styleClass="Wid90"
+                                        <p:password id="pwd2" value="#{userBean.userdata.confirmNewPassword}" styleClass="Wid90"
                                                     placeholder="Confirm Password"/>
                                         <h:outputText styleClass="Wid90"/>
 
@@ -61,8 +61,8 @@
 
                             <f:facet name="footer">
                                 <p:commandButton value="Next" type="submit" styleClass="Fright"
-                                                 actionListener="#{userBean.register}"
-                                                 update="p1, sgrowl"/>
+                                                 actionListener="#{userBean.validateSignOn}"
+                                                 update="p1, signmsg"/>
                             </f:facet>
                             <p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade" dynamic="false"
                                             showCloseIcon="true"
