TD CTO Version 1.22 - Revised 9/7/2016 Prashant

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -121,7 +121,7 @@
                 </div>
 
 
-                <div class="Container100 CustomWidthAccountypePanel" style="display: hide">
+                <div class="Container100 CustomWidthAccountypePanel" style="display: none">
                     <p:commandLink actionListener="#{tdcto.selectAcctType(7)}"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
                         <p:panel styleClass="Wid95 MarCenter tcmPanel-UI">
