--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -91,7 +91,7 @@
 
 						<div class="closeAddBeneficiary Fright">
 							<p:commandLink actionListener="#{tdcto.tdMasterData.cancelEditBeneficiary}"
-                                    process="none" update=":ctoForm:tdaccordian:beneficiaryPanel">
+                                    process="@none" update=":ctoForm:tdaccordian:beneficiaryPanel">
 								<img src="/javax.faces.resource/images/closeBen.png.xhtml?ln=tcm"
                                      class="atCheckMarkImg"/>
 							</p:commandLink>
