Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -10,20 +10,21 @@
 <p:tab title="Fund">
 <p:panel id="fundPanel" style="border: 0px; background: transparent">
 <div class="Container100">
-    <div class="Container80 Responsive90 MarTop5 MarCenter ui-color"
+    <div class="Container80 Responsive100 MarTop5 MarCenter ui-color"
          style="margin-bottom: 15px; border: 0px; background: transparent">
-        <div class="Container50 CustomWidthFA2 MarTop5">
-            <p:selectBooleanCheckbox style="font-size: 18px!important;"
-                                     styleClass="funding RegulatoryCheckBox"
-                                     value="#{tdcto.tdMasterData.fundNow}"
-                                     itemLabel="Do you want to fund now?">
+        
+        <div class="Container100 CustomWidthFA2">
+            <p:selectBooleanCheckbox styleClass="RegulatoryCheckBox"
+                    value="#{tdcto.tdMasterData.recurringFlag}"
+                    itemLabel="I would like to make recurring investments.">
                 <p:ajax update=":ctoForm:tdaccordian:fundTabV"/>
             </p:selectBooleanCheckbox>
         </div>
-        <div class="Container50 CustomWidthFA2 MarTop5">
-            <p:selectBooleanCheckbox
-                    value="#{tdcto.tdMasterData.recurringFlag}"
-                    itemLabel="I would like to make recurring investments.">
+        <div class="EmptyBox10"></div>
+        <div class="Container100 CustomWidthFA2">
+            <p:selectBooleanCheckbox styleClass="RegulatoryCheckBox"
+                                     value="#{tdcto.tdMasterData.fundNow}"
+                                     itemLabel="Do you want to fund now?">
                 <p:ajax update=":ctoForm:tdaccordian:fundTabV"/>
             </p:selectBooleanCheckbox>
         </div>
@@ -78,7 +79,7 @@
         </p:panel>
     </div>
 
-    <div class="EmptyBox10"></div>
+   <!-- <div class="EmptyBox10"></div>
     <div class="Container45 CustomWidthAccountypePanel Fleft" style="display: none">
         <p:panel styleClass="Wid90 MarCenter tcmPanel-UI">
             <div class="Container60">
@@ -92,11 +93,11 @@
                                styleClass="textAlign"/>
             </div>
         </p:panel>
-    </div>
+    </div>-->
 
     <div class="EmptyBox10"></div>
     <div class="Container100">
-        <div class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+        <div class="Container45 Fleft CustomWidthFA-Responsive">
             <label Class="Container100"
                    style="text-align: left !important; font-weight: bold !important;">
                 Investment Amount </label>
@@ -252,20 +253,42 @@
         </div>
         <div class="Container32 CustomWidthFA-Responsive">
             <label Class="Container100"
-                   style="text-align: left !important; font-weight: bold !important;">Name of delivery firm</label>
+                   style="text-align: left !important; font-weight: bold !important;">Name of Delivery Firm</label>
 
             <div class="EmptyBox5"></div>
-            <p:inputText styleClass="Wid85 FS14 CustomWidthFA-Responsive"
-                         value="#{tdcto.tdMasterData.acatDetails.fromEEPlanType}"
-                         placeholder="Name of delivery firm">
-            </p:inputText>
+              <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
+                             value="#{tdcto.tdMasterData.achBankDetail.bankAcctType}"
+                             style="width: 100%;">
+                <p:ajax/>
+                <f:selectItem itemLabel="Select the Delivery Firm" itemValue=""
+                              noSelectionOption="true"/>
+                <f:selectItem itemValue="" itemLabel="Curian Clearing" />
+<f:selectItem itemValue="" itemLabel="Edward Jones" />
+<f:selectItem itemValue="" itemLabel="First Clearing Corp(Wachovia and Wells Fargo)" />
+<f:selectItem itemValue="" itemLabel="Janney Montgomery Scott" />
+<f:selectItem itemValue="" itemLabel="Lincoln Financial Advisors" />
+<f:selectItem itemValue="" itemLabel="Lincoln Financial Securities" />
+<f:selectItem itemValue="" itemLabel="Linsco Private Ledger (LPL)" />
+<f:selectItem itemValue="" itemLabel="M and I Brokerage Services" />
+<f:selectItem itemValue="" itemLabel="Merrill Lynch" />
+<f:selectItem itemValue="" itemLabel="Morgan Stanley Smith Barney" />
+<f:selectItem itemValue="" itemLabel="National Financial Services" />
+<f:selectItem itemValue="" itemLabel="OptionsXpress/BrokersXpress" />
+<f:selectItem itemValue="" itemLabel="Pershing" />
+<f:selectItem itemValue="" itemLabel="RBC Capital Markets" />
+<f:selectItem itemValue="" itemLabel="SEI Private Trust Co." />
+<f:selectItem itemValue="" itemLabel="Stifel, Nicolaus and Company Incorporated" />
+<f:selectItem itemValue="" itemLabel="Wachovia Securities" />
+<f:selectItem itemValue="" itemLabel="Wedbush Securities Inc." />
+
+            </p:selectOneMenu>
         </div>
     </div>
     <div class="EmptyBox20"></div>
     <div class="Container100">
         <div class="Container32 CustomWidthFA-Responsive">
             <label Class="Container100"
-                   style="text-align: left !important; font-weight: bold !important;">Physical address of firm</label>
+                   style="text-align: left !important; font-weight: bold !important;">Physical Address of Firm</label>
 
             <div class="EmptyBox5"></div>
             <p:inputText styleClass="Wid85 FS14 CustomWidthFA-Responsive"
@@ -322,7 +345,7 @@
 
     </div>
 
-    <div class="EmptyBox20"></div>
+
 </p:panel>
 
 <!-- Wire transfer -->
