--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -86,8 +86,7 @@
                 </p:selectBooleanCheckbox>
             </div>
 
-            <p:panel style="border: 0px; background: transparent; margin-top: -10px;"
-                     rendered="#{tdcto.tdMasterData.acctholderhasMailing}">
+            <p:panel class="tdPanelInternal" rendered="#{tdcto.tdMasterData.acctholderhasMailing}">
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
 
