--- a/tcm/modules/web/src/main/webapp/signup.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup.xhtml
@@ -3,11 +3,12 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/common/simplelayout.xhtml">
+                template="/template/common/simple.xhtml">
 
     <f:metadata>
+        <f:viewParam name="l" value="#{userBean.beanLogonID}"/>
         <f:viewParam name="e" value="#{userBean.beanEmail}"/>
-        <f:event type="preRenderView" listener="#{uiLayout.preRenderView}"/>
+        <f:event type="preRenderView" listener="#{userBean.preRenderCreateUserID}"/>
     </f:metadata>
 
     <ui:define name="content">
@@ -20,15 +21,15 @@
                                             styleClass="Fleft" library="invessence"
                                             class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                         </div>
-                       <div class="EmptyBox10"></div>
-                       <p:growl id="sgrowl"/>
                         <div class="EmptyBox5"></div>
                         <p:panel id="signup" styleClass="Container100" style="border:0px">
 
                             <p:panel id="p1" styleClass="Container100" style="border: 0px">
                                 <div class="Container100">
                                     <div class="ContainerIndent">
-                                        <p:inputText id="email" readonly="true"
+                                        <p:messages id="signmsg" showDetail="false" sticky="true" escape="true" closable="true"/>
+                                        <div class="EmptyBox10"></div>
+                                        <p:inputText id="email" readonly="#{userBean.beanEmail != null}"
                                                      styleClass="Container80 Fleft MarAuto Fs18"
                                                      value="#{userBean.beanEmail}" placeholder="Email">
                                         </p:inputText>
@@ -98,8 +99,8 @@
                                 <div class="Container100">
                                    <div class="ContainerIndent TexAlCenter">
                                        <p:commandButton value="Next" type="submit"
-                                                        actionListener="#{userBean.gotoSignPage2}"
-                                                        update="p1, sgrowl"/>
+                                                        actionListener="#{userBean.validateSignOn}"
+                                                        update="p1, signmsg"/>
                                    </div>
                                 </div>
                             </p:panel>
